Portfolio api fully finished
