# docs/swagger.yaml
@@ -86,6 +86,25 @@ definitions:
       user_id:
         type: string
     type: object
+  genprotos.UserPortfolio:
+    properties:
+      educations:
+        items:
+          $ref: '#/definitions/genprotos.Education'
+        type: array
+      experiences:
+        items:
+          $ref: '#/definitions/genprotos.Experience'
+        type: array
+      projects:
+        items:
+          $ref: '#/definitions/genprotos.Project'
+        type: array
+      skills:
+        items:
+          $ref: '#/definitions/genprotos.Skill'
+        type: array
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -458,6 +477,35 @@ paths:
       summary: Update Experience
       tags:
       - Experience
+  /portfolio/{user_id}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve user portfolio by user ID
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Get User Portfolio Successful
+          schema:
+            $ref: '#/definitions/genprotos.UserPortfolio'
+        "400":
+          description: User ID is required
+          schema:
+            type: string
+        "500":
+          description: Error while retrieving portfolio
+          schema:
+            type: string
+      summary: Get User Portfolio
+      tags:
+      - Portfolio
   /project/byuser:
     get:
       consumes:
